# Grupo01_Lab08_Paralela

./: CMakeLists.txt
benchmarks/: CMakeLists.txt  main_bm.cpp
experiments/: CMakeLists.txt
histograms/: CMakeLists.txt  estandar.cpp  estandar.h  estandar_reduction.cpp  estandar_reduction.h  histogram.h  openmp_atomic.cpp  openmp_atomic.h  openmp_critical.cpp  openmp_critical.h  openmp_lockGuard.cpp  openmp_lockGuard.h  openmp_lockUnlock.cpp  openmp_lockUnlock.h  openmp_ompatomic.cpp  openmp_ompatomic.h  openmp_reduction.cpp  openmp_reduction.h  sequential.cpp
tests/: CMakeLists.txt  validation_test.cpp
