FILE(GLOB_RECURSE ALL_LIB_CPP *.cpp)

FIND_PACKAGE(OpenMP REQUIRED)

ADD_LIBRARY(histograms
  ${ALL_LIB_CPP}
)

SET_TARGET_PROPERTIES(histograms PROPERTIES LINKER_LANGUAGE CXX)

IF(OpenMP_CXX_FOUND)
  TARGET_LINK_LIBRARIES(histograms OpenMP::OpenMP_CXX)
ENDIF()

TARGET_LINK_LIBRARIES(histograms
  ${DEPS}
)
